Redirecto to Home when breakup

--- a/both/both/Base.lproj/Main.storyboard
+++ b/both/both/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
         <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="Home" id="BYZ-38-t0r" customClass="HomeController" customModule="both" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="home_identifier" title="Home" id="BYZ-38-t0r" customClass="HomeController" customModule="both" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
