--- a/both/both/Base.lproj/Main.storyboard
+++ b/both/both/Base.lproj/Main.storyboard
@@ -178,51 +178,8 @@
                                     <constraint firstAttribute="trailing" secondItem="zij-h4-IwC" secondAttribute="trailing" id="ueM-cy-vp0"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="good_relation" translatesAutoresizingMaskIntoConstraints="NO" id="Vjm-ff-GDk">
-                                <rect key="frame" x="116" y="235" width="98" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="98" id="APO-Ho-6Qg"/>
-                                </constraints>
-                            </imageView>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PNc-ri-gY5">
-                                <rect key="frame" x="20" y="292" width="280" height="44"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xxT-VH-sip">
-                                        <rect key="frame" x="0.0" y="0.0" width="280" height="44"/>
-                                        <color key="backgroundColor" red="0.12941176470588234" green="0.69019607843137254" blue="0.82745098039215681" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="ac7-Cp-n1e"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="GothamRoundedMedium" family="Gotham Rounded" pointSize="15"/>
-                                        <state key="normal" title="Se faire pardonner">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                <integer key="value" value="20"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="forgiveMeBtn:" destination="O9U-cv-FRI" eventType="touchUpInside" id="mig-ty-2W1"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="xxT-VH-sip" secondAttribute="bottom" id="7vc-KB-Ss2"/>
-                                    <constraint firstAttribute="height" constant="44" id="IvE-YD-7ck"/>
-                                    <constraint firstItem="xxT-VH-sip" firstAttribute="top" secondItem="PNc-ri-gY5" secondAttribute="top" id="N1T-Kh-JNb"/>
-                                    <constraint firstItem="xxT-VH-sip" firstAttribute="top" secondItem="PNc-ri-gY5" secondAttribute="top" id="RmF-0L-2Oc"/>
-                                    <constraint firstAttribute="trailing" secondItem="xxT-VH-sip" secondAttribute="trailing" id="Uoh-jM-ttr"/>
-                                    <constraint firstItem="xxT-VH-sip" firstAttribute="leading" secondItem="PNc-ri-gY5" secondAttribute="leading" id="cSp-fK-UzT"/>
-                                    <constraint firstItem="xxT-VH-sip" firstAttribute="centerY" secondItem="PNc-ri-gY5" secondAttribute="centerY" id="tca-16-5kq"/>
-                                    <constraint firstItem="xxT-VH-sip" firstAttribute="top" secondItem="PNc-ri-gY5" secondAttribute="top" id="uqB-r3-obj"/>
-                                    <constraint firstAttribute="bottom" secondItem="xxT-VH-sip" secondAttribute="bottom" id="wnS-wM-riy"/>
-                                    <constraint firstItem="xxT-VH-sip" firstAttribute="top" secondItem="PNc-ri-gY5" secondAttribute="top" id="xYK-HA-pTQ"/>
-                                </constraints>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="148" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vcI-Is-it7">
-                                <rect key="frame" x="0.0" y="351" width="320" height="168"/>
+                                <rect key="frame" x="0.0" y="306" width="320" height="213"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="category_stat_cell" rowHeight="148" id="sc3-9F-SqV" customClass="CategoryStatCell" customModule="Both" customModuleProvider="target">
@@ -390,22 +347,42 @@
                                     <outlet property="delegate" destination="O9U-cv-FRI" id="FgV-dN-oDL"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xxT-VH-sip">
+                                <rect key="frame" x="20" y="238" width="280" height="44"/>
+                                <color key="backgroundColor" red="0.12941176470588234" green="0.69019607843137254" blue="0.82745098039215681" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="ac7-Cp-n1e"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="GothamRoundedMedium" family="Gotham Rounded" pointSize="15"/>
+                                <state key="normal" title="Se faire pardonner">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="forgiveMeBtn:" destination="O9U-cv-FRI" eventType="touchUpInside" id="mig-ty-2W1"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="fDP-EM-adJ" firstAttribute="leading" secondItem="EVZ-tE-sOT" secondAttribute="leadingMargin" constant="25" id="0GH-YK-LVd"/>
-                            <constraint firstItem="PNc-ri-gY5" firstAttribute="trailing" secondItem="EVZ-tE-sOT" secondAttribute="trailingMargin" id="1q0-fY-Sog"/>
+                            <constraint firstItem="jRu-Ks-1wF" firstAttribute="top" secondItem="vcI-Is-it7" secondAttribute="bottom" id="1cB-Vr-O9l"/>
                             <constraint firstItem="fDP-EM-adJ" firstAttribute="centerX" secondItem="EVZ-tE-sOT" secondAttribute="centerX" id="2Qi-ZD-Xqi"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fDP-EM-adJ" secondAttribute="trailing" constant="15" id="4aq-BR-ivR"/>
-                            <constraint firstItem="Vjm-ff-GDk" firstAttribute="top" secondItem="fDP-EM-adJ" secondAttribute="bottom" constant="6" id="BjX-Ko-tDQ"/>
-                            <constraint firstItem="Vjm-ff-GDk" firstAttribute="centerX" secondItem="fDP-EM-adJ" secondAttribute="centerX" id="TLG-1v-Gqx"/>
-                            <constraint firstItem="PNc-ri-gY5" firstAttribute="top" secondItem="Vjm-ff-GDk" secondAttribute="bottom" constant="15" id="gC8-b3-Ht0"/>
-                            <constraint firstItem="vcI-Is-it7" firstAttribute="top" secondItem="PNc-ri-gY5" secondAttribute="bottom" constant="15" id="j19-r0-LkT"/>
+                            <constraint firstItem="vcI-Is-it7" firstAttribute="top" secondItem="xxT-VH-sip" secondAttribute="bottom" constant="24" id="4kq-Yg-Whd"/>
+                            <constraint firstItem="xxT-VH-sip" firstAttribute="leading" secondItem="EVZ-tE-sOT" secondAttribute="leadingMargin" id="5p0-XF-LTC"/>
+                            <constraint firstItem="vcI-Is-it7" firstAttribute="leading" secondItem="EVZ-tE-sOT" secondAttribute="leadingMargin" constant="-20" id="8Zz-d7-Gb4"/>
+                            <constraint firstItem="xxT-VH-sip" firstAttribute="top" secondItem="fDP-EM-adJ" secondAttribute="bottom" constant="11" id="HDu-zx-DRo"/>
+                            <constraint firstItem="xxT-VH-sip" firstAttribute="trailing" secondItem="EVZ-tE-sOT" secondAttribute="trailingMargin" id="J4Q-v6-AGv"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vcI-Is-it7" secondAttribute="trailing" constant="-20" id="WGi-1z-fEZ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="vcI-Is-it7" secondAttribute="trailing" constant="-20" id="sPk-br-Snc"/>
                             <constraint firstItem="fDP-EM-adJ" firstAttribute="top" secondItem="1Iv-zh-B6P" secondAttribute="bottom" constant="16" id="tjW-3r-PUU"/>
                             <constraint firstItem="vcI-Is-it7" firstAttribute="leading" secondItem="EVZ-tE-sOT" secondAttribute="leadingMargin" constant="-20" id="x4f-iY-eRL"/>
                             <constraint firstItem="jRu-Ks-1wF" firstAttribute="top" secondItem="vcI-Is-it7" secondAttribute="bottom" id="xFe-PY-ZQl"/>
-                            <constraint firstItem="PNc-ri-gY5" firstAttribute="leading" secondItem="EVZ-tE-sOT" secondAttribute="leadingMargin" id="zGu-dk-aAM"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -426,7 +403,6 @@
                         <outlet property="categoriesTableView" destination="vcI-Is-it7" id="HCG-lC-90F"/>
                         <outlet property="imageViewMe" destination="uEd-lr-zTK" id="eRM-dj-ahF"/>
                         <outlet property="imageViewPartner" destination="Jcy-b7-y5f" id="HoI-HD-M80"/>
-                        <outlet property="labelGlobalRelation" destination="Vjm-ff-GDk" id="dlA-8j-0ir"/>
                         <outlet property="labelMeAndPartnerName" destination="zij-h4-IwC" id="i5a-h5-X7w"/>
                     </connections>
                 </viewController>
@@ -1176,7 +1152,6 @@
         <image name="chip" width="38" height="40"/>
         <image name="dashboard_icon" width="21" height="28"/>
         <image name="good-switch" width="44" height="30"/>
-        <image name="good_relation" width="98" height="44"/>
         <image name="logo" width="190" height="41"/>
         <image name="plus" width="21" height="21"/>
         <image name="relation_icon" width="30" height="28"/>
